# CCounter

./: .gitignore  dragon-family-counter-component.podspec  package.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/dragonfamilycountercomponent/: CounterBridge.kt  DragonFamilyCounterComponentPackage.kt  DragonFamilyCounterComponentView.kt  DragonFamilyCounterComponentViewManager.kt
android/src/newarch/: DragonFamilyCounterComponentSpec.kt
android/src/oldarch/: DragonFamilyCounterComponentSpec.kt
cpp/: CounterLogic.cpp  CounterLogic.h
ios/: CounterBridge.h  CounterBridge.mm  DragonFamilyCounterComponentViewManager.m  DragonFamilyCounterComponentViewManager.swift
src/: index.tsx
